# UK-Healthcare-Automation

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
data/: candidate_profile.example.json  candidate_profile_full.example.json
docs/: AI_MATCHING.md  ANTHROPIC_INTEGRATION.md  APPLICATION_WORKFLOW.md  ARCHITECTURE.md  AUTHENTICATION.md  BACKGROUND_SCHEDULER.md  BROWSER_FRAMEWORK.md  CANDIDATE_PROFILE.md  CAREER_ASSISTANT.md  CI_CD.md  DASHBOARD.md  DEPLOYMENT.md  DOCUMENT_GENERATION.md  EMAIL_NOTIFICATIONS.md  EMPLOYER_CRM.md  INTERVIEWS.md  JOB_INGESTION.md  JOB_MANAGEMENT.md  NHS_SCRAPER.md  NOTIFICATIONS.md  SCRAPER_FRAMEWORK.md
scripts/: db_diagnostics.py  generate_applications.py  init_db.py  run_daily_report.py  run_scraper.py  seed_demo_data.py  verify_browser_framework.py  verify_live_production.py  verify_scraper_framework.py
templates/: cover_letter_template.jinja  cv_template.jinja
tests/: conftest.py  dummy_scraper.py  fixture_server.py  test_ai_matching.py  test_anthropic_provider.py  test_application_workflow.py  test_authentication.py  test_candidate_profile.py  test_career_assistant.py  test_document_generation.py  test_email_notifications.py  test_employer_crm.py  test_employer_crm_web.py  test_ingestion.py  test_interviews.py  test_interviews_web.py  test_job_organization.py  test_job_organization_web.py  test_job_search.py  test_logging_config.py  test_nhs_scraper.py  test_notifications.py  test_scheduler.py  test_settings.py  test_trac_scraper.py  test_web_dashboard.py
(+338 files in other folders)
